DepartmentService CRUD Success: one emf and many em (singletons deleted)