@@ -2,11 +2,12 @@ package com.elina.service.impl;
 
 import com.elina.model.Course;
 import com.elina.model.Department;
-import com.elina.service.DepartmentService;
 import com.elina.util.Utility;
-import org.junit.jupiter.api.DisplayName;
-import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.*;
 
+import javax.persistence.EntityManager;
+import javax.persistence.EntityManagerFactory;
+import javax.persistence.Persistence;
 import java.util.LinkedList;
 import java.util.List;
 
@@ -14,51 +15,54 @@ import static org.junit.jupiter.api.Assertions.*;
 
 class DepartmentServiceImplTest {
 
-    @Test
-    @DisplayName("C")
-    public void saveDepartmentTest()
-    {
-        DepartmentServiceImpl departmentService = new DepartmentServiceImpl();
-        // Create two department and add 2 courses to their list of courses
-        Department department1 = Utility.createDepartment1();
-        Department department2 = Utility.createDepartment2();
+    private Department department1;
+    private Department department2;
+    private List<Department> savedDepartments = new LinkedList<>();
+    private List<Department> retrievedDepartments;
+    private EntityManagerFactory emf = Persistence.createEntityManagerFactory("Elina");
+    private DepartmentServiceImpl departmentService;
+    private LinkedList<EntityManager> emList = new LinkedList<>();
+
+    @BeforeEach
+    public void init() {
+        initDepartments();
+
+        emList.add(emf.createEntityManager());
+        emList.getFirst().getTransaction().begin();
+
+        departmentService = new DepartmentServiceImpl(emList.getFirst());
         departmentService.saveDepartment(department1);
         departmentService.saveDepartment(department2);
-        List<Department> departments = departmentService.retrieveAllDepartments();
-        System.out.print(departments);
-        assertEquals(department1.getName(), departments.get(0).getName());
+
+        retrievedDepartments = departmentService.retrieveAllDepartments();
+
+        emList.getFirst().getTransaction().commit();
+
+    }
+
+
+    @Test
+    @DisplayName("C")
+    public void createDepartmentTest()
+    {
+        assertEquals(department1.getName(), retrievedDepartments.get(0).getName());
+        System.out.print("Retrieved\n"+retrievedDepartments);
+        System.out.print("Saved\n"+savedDepartments);
     }
 
     @Test
     @DisplayName("R")
-    public void getDepartmentsTest()
+    public void retrieveDepartmentsTest()
     {
-        DepartmentServiceImpl departmentService = new DepartmentServiceImpl();
-        // Create two department and add 2 courses to their list of courses
-        Department department1 = Utility.createDepartment1();
-        Department department2 = Utility.createDepartment2();
-        departmentService.saveDepartment(department1);
-        departmentService.saveDepartment(department2);
-        List<Department> savedDepartments = new LinkedList<>();
-        savedDepartments.add(department1);
-        savedDepartments.add(department2);
-        List<Department> retrievedDepartments = departmentService.retrieveAllDepartments();
         assertEquals(savedDepartments, retrievedDepartments);
         assertEquals(department1, departmentService.retrieveDepartmentByID(1).get());
         assertEquals(department1, departmentService.retrieveDepartmentByName("Department 1").get());
     }
 
-    /*
     @Test
     @DisplayName("U")
-    public void addCourseTest()
+    public void updateCourseTest()
     {
-        DepartmentService departmentService = new DepartmentServiceImpl();
-        // Create two department and add 2 courses to their list of courses
-        Department department1 = Utility.createDepartment1();
-        Department department2 = Utility.createDepartment2();
-        departmentService.saveDepartment(department1);
-        departmentService.saveDepartment(department2);
         departmentService.addCourse(1, new Course(4,"Course 4", "Classic Control"));
         assertEquals(department1.getCourses(), departmentService.retrieveDepartmentByID(1).get().getCourses());
     }
@@ -67,18 +71,23 @@ class DepartmentServiceImplTest {
     @DisplayName("D")
     public void deleteDepartmentTest()
     {
-        DepartmentService departmentService = new DepartmentServiceImpl();
-        // Create two department and add 2 courses to their list of courses
-        Department department1 = Utility.createDepartment1();
-        Department department2 = Utility.createDepartment2();
-        departmentService.saveDepartment(department1);
-        departmentService.saveDepartment(department2);
-        departmentService.deleteDepartment(department1);
+        departmentService.deleteDepartment(department2);
         List<Department> retrievedDepartments = departmentService.retrieveAllDepartments();
         assertEquals(1, retrievedDepartments.size());
     }
 
-     */
+    @AfterEach
+    public void dropDown() {
+        emList.getFirst().clear();
+        emList.getFirst().close();
+    }
 
+    private void initDepartments()
+    {
+        department1 = Utility.createDepartment1();
+        department2 = Utility.createDepartment2();
+        savedDepartments.add(department1);
+        savedDepartments.add(department2);
+    }
 
 }
